--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,16 @@
-.header {
-  h1 {
-    background-color: red;
+body {
+  width: 100%;
+  .header {
+    border: 1px solid blueviolet;
+    width: 100%;
+  }
+
+  .main-container {
+    border: 1px solid orange;
+    margin: 0 auto;
+  }
+
+  .footer {
+    border: 1px solid mediumseagreen;
   }
 }
