--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,24 @@
 body {
-  width: 100%; }
-  body .header {
-    border: 1px solid blueviolet;
-    width: 100%; }
-  body .main-container {
-    border: 1px solid orange;
-    margin: 0 auto; }
-  body .footer {
-    border: 1px solid mediumseagreen; }
+  width: 100%;
+  margin: 0 auto; }
+
+.header {
+  border: 1px solid blueviolet;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; }
+
+.main-container {
+  border: 1px solid orange;
+  margin: 0 auto; }
+  .main-container .projects {
+    border: 1px solid brown; }
+  .main-container .skills {
+    border: 1px solid pink; }
+  .main-container .contact {
+    border: 1px solid goldenrod; }
+
+.footer {
+  border: 1px solid mediumseagreen; }
