--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,23 +1,36 @@
 body {
   width: 100%;
   margin: 0 auto;
+  background-color: black;
+  box-sizing: border-box;
 }
 
 .header {
-  border: 1px solid blueviolet;
+  background-color: black;
   display: flex;
   flex-flow: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
+
+  h1 {
+    color: white;
+  }
+
+  p {
+    color: white;
+  }
 }
 
 .main-container {
-  border: 1px solid orange;
   margin: 0 auto;
+  height: auto;
 
   .projects {
-    border: 1px solid brown;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    background-color: white;
 
     .projects-header {}
 
@@ -25,7 +38,10 @@ body {
   }
 
   .skills {
-    border: 1px solid pink;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    background-color: white;
 
     .skills-header {}
 
@@ -34,7 +50,10 @@ body {
   }
 
   .contact {
-    border: 1px solid goldenrod;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    background-color: white;
 
     .contact-header {}
 
@@ -45,4 +64,5 @@ body {
 
 .footer {
   border: 1px solid mediumseagreen;
+  height: 20vh;
 }
