--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,132 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol,
+ul {
+  list-style: none; }
+
+blockquote,
+q {
+  quotes: none; }
+
+blockquote:before, blockquote:after {
+  content: '';
+  content: none; }
+
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
 body {
   width: 100%;
   margin: 0 auto;
@@ -16,10 +145,12 @@ body {
   .header h1 {
     color: white;
     text-transform: uppercase;
-    font-size: 4rem; }
+    font-size: 4rem;
+    font-weight: 700; }
   .header p {
     color: white;
-    font-family: "Open Sans", sans-serif; }
+    font-family: "Open Sans", sans-serif;
+    text-transform: uppercase; }
 
 .main-container {
   margin: 0 auto;
@@ -30,27 +161,39 @@ body {
     height: 100vh;
     background-color: white; }
     .main-container .projects .projects-header {
-      font-size: 1rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2rem;
       text-transform: uppercase;
-      border: 1px solid red; }
+      height: 45px;
+      text-align: center; }
   .main-container .skills {
     display: flex;
     justify-content: center;
     height: 100vh;
     background-color: darkslategray; }
     .main-container .skills .skills-header {
-      font-size: 1rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2rem;
       text-transform: uppercase;
-      border: 1px solid red; }
+      height: 45px;
+      text-align: center; }
   .main-container .contact {
     display: flex;
     justify-content: center;
     height: 100vh;
     background-color: white; }
     .main-container .contact .contact-header {
-      font-size: 1rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2rem;
       text-transform: uppercase;
-      border: 1px solid red; }
+      height: 45px;
+      text-align: center; }
 
 .footer {
   border: 1px solid mediumseagreen;
