--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,6 +2,10 @@
 @import "variables";
 @import "mixins";
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   width: 100%;
   margin: 0 auto;
@@ -23,7 +27,7 @@ body {
     color: white;
     text-transform: uppercase;
     font-size: 4rem;
-    font-weight: $bold;
+    font-weight: $semibold;
   }
 
   p {
@@ -58,6 +62,7 @@ body {
 
     .skills-header {
       @include section-header;
+      color: white;
     }
 
     .skills-container {}
@@ -80,6 +85,12 @@ body {
 }
 
 .footer {
-  border: 1px solid mediumseagreen;
-  height: 20vh;
+  height: 10vh;
+  @include centerer;
+
+  p {
+    color: white;
+    font-size: .8rem;
+    text-transform: uppercase;
+  }
 }
