--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,7 +1,7 @@
 
 // Font Families
 $sans-serif: 'Josefin Sans', sans-serif;
-$serif: 'Open Sans', sans-serif;
+$sans-serif2: 'Open Sans', sans-serif;
 
 // Font Weights
 $light: 300;
