--- a/css/reset.css
+++ b/css/reset.css
@@ -1,6 +1,6 @@
 /* http://meyerweb.com/eric/tools/css/reset/ 
-  v2.0 | 20110126
-  License: none (public domain)
+   v2.0 | 20110126
+   License: none (public domain)
 */
 html,
 body,
@@ -89,7 +89,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-}
+  text-decoration: none; }
 
 /* HTML5 display-role reset for older browsers */
 article,
@@ -103,36 +103,27 @@ hgroup,
 menu,
 nav,
 section {
-  display: block;
-}
+  display: block; }
 
 body {
-  line-height: 1;
-}
+  line-height: 1; }
 
 ol,
 ul {
-  list-style: none;
-}
+  list-style: none; }
 
 blockquote,
 q {
-  quotes: none;
-}
+  quotes: none; }
 
-blockquote:before,
-blockquote:after {
+blockquote:before, blockquote:after {
   content: '';
-  content: none;
-}
+  content: none; }
 
-q:before,
-q:after {
+q:before, q:after {
   content: '';
-  content: none;
-}
+  content: none; }
 
 table {
   border-collapse: collapse;
-  border-spacing: 0;
-}
+  border-spacing: 0; }
