--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -33,7 +33,7 @@ body {
 
   p {
     color: white;
-    font-family: $serif;
+    font-family: $sans-serif2;
     text-transform: uppercase;
   }
 
@@ -50,21 +50,45 @@ body {
 
   .projects {
     display: flex;
-    justify-content: center;
-    height: 100vh;
+    flex-flow: column;
+    height: 33%;
     background-color: white;
 
     .projects-header {
       @include section-header;
     }
 
-    .projects-container {}
+    .projects-container {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-evenly;
+      width: 100%;
+      height: auto;
+      margin-bottom: 30px;
+      box-sizing: border-box;
+
+      a {
+        margin-top: 30px;
+        padding: 0;
+        width: 45%;
+        height: auto;
+        color: black;
+        font-size: 1rem;
+        text-transform: uppercase;
+
+        .gif {
+          width: 100%;
+          height: auto;
+        }
+      }
+
+    }
   }
 
   .skills {
     display: flex;
     justify-content: center;
-    height: 100vh;
+    height: auto;
     background-color: #2aa091;
 
     .skills-header {
@@ -79,7 +103,7 @@ body {
   .contact {
     display: flex;
     justify-content: center;
-    height: 100vh;
+    height: auto;
     background-color: white;
 
     .contact-header {
@@ -104,7 +128,6 @@ body {
   }
 
   a {
-    text-decoration: none;
     color: whitesmoke;
     font-size: .3rem;
   }
