--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -74,9 +74,11 @@ body {
         height: auto;
         color: black;
         font-size: 1rem;
-        text-transform: uppercase;
+        text-transform: lowercase;
+        font-family: $sans-serif2;
 
         .gif {
+          margin-top: 7px;
           width: 100%;
           height: auto;
         }
