--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -81,6 +81,13 @@ body {
           margin-top: 7px;
           width: 100%;
           height: auto;
+          opacity: 0.5;
+          transition: opacity .5s;
+
+          &:hover{
+            opacity: 1;
+            transition: opacity .5s;
+          }
         }
       }
 
