--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -49,9 +49,7 @@ body {
   height: auto;
 
   .projects {
-    display: flex;
-    flex-flow: column;
-    height: 33%;
+    @include flex-column-auto;
     background-color: white;
 
     .projects-header {
@@ -59,13 +57,7 @@ body {
     }
 
     .projects-container {
-      display: flex;
-      flex-flow: row wrap;
-      justify-content: space-evenly;
-      width: 100%;
-      height: auto;
-      margin-bottom: 30px;
-      box-sizing: border-box;
+      @include container;
 
       a {
         margin-top: 30px;
@@ -84,7 +76,7 @@ body {
           opacity: 0.5;
           transition: opacity .5s;
 
-          &:hover{
+          &:hover {
             opacity: 1;
             transition: opacity .5s;
           }
@@ -95,9 +87,7 @@ body {
   }
 
   .technologies {
-    display: flex;
-    justify-content: center;
-    height: auto;
+    @include flex-column-auto;
     background-color: #2aa091;
 
     .technologies-header {
@@ -105,21 +95,48 @@ body {
       color: white;
     }
 
-    .technologies-container {}
+    .technologies-container {
+      @include container;
+
+      a {
+        margin-top: 30px;
+        padding: 0;
+        width: 10%;
+        height: auto;
+
+        img {
+          width: 100%;
+          height: auto;
+        }
+      }
+    }
 
   }
 
   .contact {
-    display: flex;
-    justify-content: center;
-    height: auto;
+    @include flex-column-auto;
     background-color: white;
 
     .contact-header {
       @include section-header;
     }
 
-    .contact-container {}
+    .contact-container {
+      @include container;
+      align-items: center;
+      a {
+        margin-top: 30px;
+        padding: 0;
+        width: 10%;
+        height: auto;
+
+        img {
+          width: 100%;
+          height: auto;
+
+        }
+      }
+    }
 
   }
 }
