--- a/css/styles.css
+++ b/css/styles.css
@@ -183,10 +183,10 @@ body {
       justify-content: space-evenly;
       width: 100%;
       height: auto;
-      margin-bottom: 30px;
+      margin-bottom: 50px;
       box-sizing: border-box; }
       .main-container .projects .projects-container a {
-        margin-top: 30px;
+        margin-top: 50px;
         padding: 0;
         width: 45%;
         height: auto;
@@ -224,11 +224,12 @@ body {
       justify-content: space-evenly;
       width: 100%;
       height: auto;
-      margin-bottom: 30px;
-      box-sizing: border-box; }
+      margin-bottom: 50px;
+      box-sizing: border-box;
+      padding-right: 10%; }
       .main-container .technologies .technologies-container a {
-        margin-top: 30px;
-        padding: 0;
+        margin-top: 50px;
+        padding-left: 10%;
         width: 10%;
         height: auto; }
         .main-container .technologies .technologies-container a img {
@@ -254,11 +255,11 @@ body {
       justify-content: space-evenly;
       width: 100%;
       height: auto;
-      margin-bottom: 30px;
+      margin-bottom: 50px;
       box-sizing: border-box;
       align-items: center; }
       .main-container .contact .contact-container a {
-        margin-top: 30px;
+        margin-top: 50px;
         padding: 0;
         width: 10%;
         height: auto; }
