--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -60,7 +60,7 @@ body {
       @include container;
 
       a {
-        margin-top: 30px;
+        margin-top: 50px;
         padding: 0;
         width: 45%;
         height: auto;
@@ -97,10 +97,10 @@ body {
 
     .technologies-container {
       @include container;
-
+      padding-right:10%;
       a {
-        margin-top: 30px;
-        padding: 0;
+        margin-top: 50px;
+        padding-left: 10%;
         width: 10%;
         height: auto;
 
@@ -125,7 +125,7 @@ body {
       @include container;
       align-items: center;
       a {
-        margin-top: 30px;
+        margin-top: 50px;
         padding: 0;
         width: 10%;
         height: auto;
