--- a/css/styles.css
+++ b/css/styles.css
@@ -162,12 +162,13 @@ body {
 
 .main-container {
   margin: 0 auto;
-  height: auto; }
+  height: 300vh; }
   .main-container .projects {
     display: flex;
     flex-flow: column;
     height: auto;
-    background-color: white; }
+    background-color: white;
+    height: 100vh; }
     .main-container .projects .projects-header {
       display: flex;
       justify-content: center;
@@ -207,7 +208,8 @@ body {
     display: flex;
     flex-flow: column;
     height: auto;
-    background-color: #2aa091; }
+    background-color: #2aa091;
+    height: 100vh; }
     .main-container .technologies .technologies-header {
       display: flex;
       justify-content: center;
@@ -240,7 +242,8 @@ body {
     display: flex;
     flex-flow: column;
     height: auto;
-    background-color: white; }
+    background-color: white;
+    height: 100vh; }
     .main-container .contact .contact-header {
       display: flex;
       justify-content: center;
