--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ body {
 
 .main-container {
   margin: 0 auto;
-  height: 300vh; }
+  height: auto; }
   .main-container .projects {
     display: flex;
     flex-flow: column;
@@ -184,8 +184,8 @@ body {
       justify-content: space-evenly;
       width: 100%;
       height: auto;
-      margin-bottom: 50px;
-      box-sizing: border-box; }
+      box-sizing: border-box;
+      height: auto; }
       .main-container .projects .projects-container a {
         margin-top: 50px;
         padding: 0;
@@ -226,7 +226,6 @@ body {
       justify-content: space-evenly;
       width: 100%;
       height: auto;
-      margin-bottom: 50px;
       box-sizing: border-box;
       padding-right: 10%;
       align-items: center; }
@@ -243,7 +242,7 @@ body {
     flex-flow: column;
     height: auto;
     background-color: white;
-    height: 100vh; }
+    height: auto; }
     .main-container .contact .contact-header {
       display: flex;
       justify-content: center;
@@ -259,7 +258,6 @@ body {
       justify-content: space-evenly;
       width: 100%;
       height: auto;
-      margin-bottom: 50px;
       box-sizing: border-box;
       align-items: center; }
       .main-container .contact .contact-container a {
