--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ body {
     flex-flow: column;
     height: auto;
     background-color: white;
-    height: 100vh; }
+    height: auto; }
     .main-container .projects .projects-header {
       display: flex;
       justify-content: center;
@@ -184,8 +184,8 @@ body {
       justify-content: space-evenly;
       width: 100%;
       height: auto;
-      box-sizing: border-box;
-      height: auto; }
+      padding-bottom: 50px;
+      box-sizing: border-box; }
       .main-container .projects .projects-container a {
         margin-top: 50px;
         padding: 0;
@@ -199,7 +199,7 @@ body {
           margin-top: 7px;
           width: 100%;
           height: auto;
-          opacity: 0.5;
+          opacity: 0.7;
           transition: opacity .5s; }
           .main-container .projects .projects-container a .gif:hover {
             opacity: 1;
@@ -209,7 +209,7 @@ body {
     flex-flow: column;
     height: auto;
     background-color: #2aa091;
-    height: 100vh; }
+    height: auto; }
     .main-container .technologies .technologies-header {
       display: flex;
       justify-content: center;
@@ -226,6 +226,7 @@ body {
       justify-content: space-evenly;
       width: 100%;
       height: auto;
+      padding-bottom: 50px;
       box-sizing: border-box;
       padding-right: 10%;
       align-items: center; }
@@ -258,6 +259,7 @@ body {
       justify-content: space-evenly;
       width: 100%;
       height: auto;
+      padding-bottom: 50px;
       box-sizing: border-box;
       align-items: center; }
       .main-container .contact .contact-container a {
@@ -270,7 +272,7 @@ body {
           height: auto; }
 
 .footer {
-  height: 10vh;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
