--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -19,7 +19,7 @@
   justify-content: space-evenly;
   width: 100%;
   height: auto;
-  // padding-bottom: 50px;
+  padding-bottom: 50px;
   box-sizing: border-box;
 }
 
