--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,12 @@ body {
     text-transform: uppercase;
     font-size: 6rem;
     font-weight: 500; }
+    @media (max-width: 630px) {
+      .header h1 {
+        font-size: 5rem; } }
+    @media (max-width: 533px) {
+      .header h1 {
+        font-size: 4rem; } }
   .header p {
     color: white;
     font-family: "Open Sans", sans-serif;
