--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -29,6 +29,12 @@ body {
     text-transform: uppercase;
     font-size: 6rem;
     font-weight: $semibold;
+    @media (max-width: 630px){
+      font-size: 5rem;
+    }
+    @media (max-width: 533px){
+      font-size: 4rem;
+    }
   }
 
   p {
