--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -13,7 +13,23 @@ body {
   background-color: black;
   box-sizing: border-box;
   font-family: $sans-serif;
-
+  z-index: 0;
+}
+.scroll-buttons {
+  width: 20%;
+  height: 100vh;
+  position: fixed;
+  border: 1px solid purple;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+  img {
+    width: 50%;
+    height: auto;
+    align-self: flex-start;
+    z-index: 100;
+    border: 1px solid red;
+  }
 }
 
 .header {
@@ -41,12 +57,6 @@ body {
     color: white;
     font-family: $sans-serif2;
     text-transform: uppercase;
-  }
-
-  img {
-    width: 10%;
-    height: auto;
-    align-self: flex-start;
   }
 }
 
