--- a/css/styles.css
+++ b/css/styles.css
@@ -144,16 +144,16 @@ body {
   width: 20%;
   height: 100vh;
   position: fixed;
-  border: 1px solid purple;
   display: flex;
   flex-flow: column;
-  justify-content: space-between; }
+  justify-content: space-between;
+  align-items: flex-end;
+  box-sizing: border-box; }
   .scroll-buttons img {
-    width: 50%;
+    width: 30%;
     height: auto;
     align-self: flex-start;
-    z-index: 100;
-    border: 1px solid red; }
+    z-index: 100; }
 
 .header {
   background-color: lightcoral;
