--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -19,16 +19,17 @@ body {
   width: 20%;
   height: 100vh;
   position: fixed;
-  border: 1px solid purple;
   display: flex;
   flex-flow: column;
   justify-content: space-between;
+  align-items: flex-end;
+  box-sizing: border-box;
   img {
-    width: 50%;
+    width: 30%;
     height: auto;
     align-self: flex-start;
     z-index: 100;
-    border: 1px solid red;
+    // margin-left: 25%;
   }
 }
 
