--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -16,7 +16,8 @@ body {
   z-index: 0;
 }
 .scroll-buttons {
-  width: 20%;
+  width: 10%;
+  left: 0;
   height: 100vh;
   position: fixed;
   display: flex;
@@ -25,7 +26,7 @@ body {
   align-items: flex-end;
   box-sizing: border-box;
   img {
-    width: 30%;
+    width: 85%;
     height: auto;
     align-self: flex-start;
     z-index: 100;
