--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,8 @@ body {
   z-index: 0; }
 
 .scroll-buttons {
-  width: 20%;
+  width: 10%;
+  left: 0;
   height: 100vh;
   position: fixed;
   display: flex;
@@ -150,7 +151,7 @@ body {
   align-items: flex-end;
   box-sizing: border-box; }
   .scroll-buttons img {
-    width: 30%;
+    width: 85%;
     height: auto;
     align-self: flex-start;
     z-index: 100; }
