--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,9 @@ body {
     height: auto;
     align-self: flex-start;
     z-index: 100; }
+    @media (max-width: 700px) {
+      .scroll-buttons img {
+        width: 100%; } }
 
 .header {
   background-color: lightcoral;
@@ -166,14 +169,25 @@ body {
   .header h1 {
     color: white;
     text-transform: uppercase;
-    font-size: 6rem;
-    font-weight: 500; }
-    @media (max-width: 630px) {
+    font-size: 8rem;
+    font-weight: 500;
+    width: 86%;
+    transition: font-size .25s; }
+    @media (max-width: 900px) {
+      .header h1 {
+        font-size: 7rem; } }
+    @media (max-width: 800px) {
+      .header h1 {
+        font-size: 6rem; } }
+    @media (max-width: 690px) {
       .header h1 {
         font-size: 5rem; } }
-    @media (max-width: 533px) {
+    @media (max-width: 590px) {
       .header h1 {
         font-size: 4rem; } }
+    @media (max-width: 470px) {
+      .header h1 {
+        font-size: 3.5rem; } }
   .header p {
     color: white;
     font-family: "Open Sans", sans-serif;
@@ -185,6 +199,7 @@ body {
   .main-container .projects {
     display: flex;
     flex-flow: column;
+    align-items: center;
     height: auto;
     background-color: white;
     height: auto; }
@@ -204,7 +219,8 @@ body {
       width: 100%;
       height: auto;
       padding-bottom: 50px;
-      box-sizing: border-box; }
+      box-sizing: border-box;
+      width: 90%; }
       .main-container .projects .projects-container a {
         margin-top: 50px;
         padding: 0;
@@ -226,6 +242,7 @@ body {
   .main-container .technologies {
     display: flex;
     flex-flow: column;
+    align-items: center;
     height: auto;
     background-color: #2aa091;
     height: auto; }
@@ -260,6 +277,7 @@ body {
   .main-container .contact {
     display: flex;
     flex-flow: column;
+    align-items: center;
     height: auto;
     background-color: white;
     height: auto; }
@@ -298,9 +316,6 @@ body {
   display: flex;
   flex-flow: column-reverse;
   justify-content: space-evenly; }
-  .footer .icon-credit {
-    color: whitesmoke;
-    font-size: .3rem; }
   .footer a {
     color: whitesmoke;
     font-size: .3rem; }
