updating font family

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -80,6 +80,8 @@ body {
     color: white;
     font-family: $sans-serif2;
     text-transform: uppercase;
+    font-size: 1.5rem;
+    color: black;
   }
 }
 
