--- a/css/styles.css
+++ b/css/styles.css
@@ -191,7 +191,9 @@ body {
   .header p {
     color: white;
     font-family: "Open Sans", sans-serif;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    color: black; }
 
 .main-container {
   margin: 0 auto;
