--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -40,12 +40,12 @@ body {
 }
 
 .header {
-  background-color: lightcoral;
+  @include header-image;
   display: flex;
   flex-flow: column;
   align-items: center;
   justify-content: space-evenly;
-  height: 100vh;
+  height: 80vh;
 
   h1 {
     color: white;
@@ -54,6 +54,7 @@ body {
     font-weight: $semibold;
     width: 86%;
     transition: font-size .25s;
+    border-bottom: 2px solid white;
 
     @media (max-width: 900px) {
       font-size: 7rem;
@@ -81,7 +82,6 @@ body {
     font-family: $sans-serif2;
     text-transform: uppercase;
     font-size: 1.5rem;
-    color: black;
   }
 }
 
@@ -91,7 +91,6 @@ body {
 
   .projects {
     @include flex-column-auto;
-    background-color: white;
     height: auto;
 
     .projects-header {
@@ -100,30 +99,49 @@ body {
 
     .projects-container {
       @include container;
-      width: 90%;
+      width: 100%;
 
-      a {
-        margin-top: 50px;
-        padding: 0;
-        width: 45%;
-        height: auto;
-        color: black;
-        font-size: 1rem;
-        text-transform: lowercase;
-        font-family: $sans-serif2;
-
-        .gif {
-          margin-top: 7px;
-          width: 100%;
-          height: auto;
-          opacity: 0.7;
-          transition: opacity .5s;
-
-          &:hover {
-            opacity: 1;
-            transition: opacity .5s;
+      .img-container {
+        width: 55%;
+        height: 36vh;
+        .inner-text{
+          height: 100%;
+          width: 40%;
+          padding-left: 20px;
+          display: flex;
+          flex-flow: column;
+          justify-content: center;
+          .inner-header{
+            color: white;
+            font-size: 2rem;
+            padding-bottom: 15px;
+            border-bottom: 1px solid white;
+          }
+          .inner-description{
+            padding-top: 15px;
+            color: white;
+            font-size: 1rem;
           }
         }
+      }
+
+      .bonafind {
+        @include project-image1;
+      }
+
+      .notes-vue {
+        @include project-image2;
+      }
+
+      .description {
+        width: 45%;
+        height: 36vh;
+      }
+      .top {
+        @include description1;
+      }
+      .bottom{
+        @include description2;
       }
     }
   }
