--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -8,3 +8,9 @@ $light: 300;
 $normal: 400;
 $semibold: 500;
 $bold: 700;
+
+// Images
+
+$header: "../assets/eberhard-grossgasteiger-338314-unsplash.jpg";
+$bonafind: "../assets/bonafind.png";
+$vue-notes: "../assets/vue-notes.png";
